--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="static/p5.min.js"></script>
-        <script src="static/game.min.js"></script>
+        <script src="static/p5.dom.min.js"></script>
+        <script src="gulp/dist/concat.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
