--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset="utf-8">
         <script src="static/p5.min.js"></script>
         <script src="static/p5.dom.min.js"></script>
-        <script src="gulp/dist/concat.js"></script>
+        <script src="static/game.min.js"></script>
     </head>
     <body>
     </body>
